tabs: fix multiple scrollbars

--- a/src/app/play/play.component.css
+++ b/src/app/play/play.component.css
@@ -20,10 +20,6 @@
     width: 100%;
 }
 
-.tab-container.main-lower ::ng-deep .main-space {
-    overflow: auto;
-}
-
 .console {
     height: 100%;
     width: 100%;
